small fix in letter spacing

--- a/app/assets/stylesheets/external/asha.css.scss
+++ b/app/assets/stylesheets/external/asha.css.scss
@@ -141,7 +141,7 @@ body.pages.pages-asha.landing {
     }
     p {
       font-size: 16px;
-      letter-spacing: normal;
+      letter-spacing: 0.5px;
     }
     .divider {
       margin: 50px auto;
@@ -168,7 +168,7 @@ body.pages.pages-asha.landing {
     .company_background {
       p {
         text-align: left;
-        letter-spacing: 0.5px;
+        letter-spacing: 1px;
       }
     }
     .tiles_section {
